@@ -28,27 +28,26 @@ class AuthenticationsController < ApplicationController
   #----------------------------------------------------------------------------
   def create
     @authentication = Authentication.new(params[:authentication])
-    # We are saving with a block to accomodate for OpenID authentication. Without OpenID 
-    # it can be save without a block:
-    #
-    #   if @authentication.save
-    #     # ... successful login
-    #   else
-    #     # ... unsuccessful login
-    #   end
-    @authentication.save do |result|
-      if result
-        flash[:notice] = "Welcome to Fat Free CRM!"
-        if @authentication.record.login_count > 1 && @authentication.record.last_login_at?
-          flash[:notice] << " Your last login was on " << @authentication.record.last_login_at.strftime("%A, %B %e at %I:%M %p.")
-        end
-        redirect_back_or_default root_url
-      else
-        render :action => :new
+
+    if @authentication.save && !@authentication.user.suspended?
+      flash[:notice] = "Welcome to Fat Free CRM!"
+      if @authentication.record.login_count > 1 && @authentication.record.last_login_at?
+        flash[:notice] << " Your last login was on " << @authentication.record.last_login_at.strftime("%A, %B %e at %I:%M %p.")
       end
+      redirect_back_or_default root_url
+    else
+      render :action => :new
     end
   end
-  
+
+  # The login form gets submitted to :update action when @authentication is
+  # saved (@authentication != nil) but the user is suspended.
+  #
+  # Note that user is always shown "Invalid username or password" message,
+  # even if her account is suspended.
+  #----------------------------------------------------------------------------
+  alias :update :create
+
   #----------------------------------------------------------------------------
   def destroy
     current_user_session.destroy
