@@ -17,18 +17,37 @@
 
 class Authentication < Authlogic::Session::Base # NOTE: This is not ActiveRecord model.
   authenticate_with User
+  after_save :check_if_suspended
 
   private
 
   # Override Authlogic's validate_by_password() to allow blank passwords. See
-  # authlogic/session/pasword.rb for details.
+  # authlogic/lib/authlogic/session/pasword.rb for details.
   #----------------------------------------------------------------------------
   def validate_by_password
-    if send("protected_#{password_field}").blank?
-      self.invalid_password = false
-      self.attempted_record = search_for_record(find_by_login_method, send(login_field))
+    self.invalid_password = false
+
+    self.attempted_record = search_for_record(find_by_login_method, send(login_field))
+    if self.attempted_record.blank?
+      errors.add(login_field, "is not valid")
     else
-      super # Password is not blank, authenticate as usual.
+      # Run password verification first, but then adjust the validity if both
+      # password hash and password field are blank.
+      self.invalid_password = !self.attempted_record.send(verify_password_method, send("protected_#{password_field}"))
+      if self.attempted_record.password_hash.blank? && send("protected_#{password_field}").blank?
+        self.invalid_password = false
+      end
+      if self.invalid_password?
+        errors.add(password_field, "is not valid")
+      end
     end
   end
+
+  #----------------------------------------------------------------------------
+  def check_if_suspended
+    if self.user && self.user.suspended?
+      self.errors.add_to_base("User account has been suspended")
+    end
+  end
+
 end
