@@ -10,6 +10,7 @@ Mon, Aug 3, 2009
 - Include all application helpers except the ones in /admin/helpers subdirectory (GH #5).
 - Make sure editing assets doesn't change asset owner (LH #79).
 - Implemented [Suspend] and [Reactivate] when managing users.
+- Prevent suspended user from logging in.
 
 Sun, Aug 2, 2009
 ---------------------------------------------------------------------
